clear both left right

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>class 4</title>
 </head>
 <body>
-    <div class="overflow">
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus minima ab, quas, placeat consectetur exercitationem delectus est commodi sequi voluptatibus totam rerum omnis aliquam ad ducimus quisquam. Sed dignissimos iste maxime enim inventore libero laborum numquam. Eligendi consequuntur enim, unde accusantium quidem iusto magnam aspernatur tempore cum? Odit aspernatur molestias dolorem natus dicta! Unde, delectus. Asperiores ea, iure est maxime earum deleniti, repudiandae facere tenetur, in fuga quia impedit culpa! Obcaecati modi iure illo eaque molestias veritatis nesciunt delectus adipisci quas tenetur magni maiores id laborum omnis voluptatem, dolore architecto illum tempora. Quo, itaque neque iste possimus placeat libero odio at porro a quae aspernatur veniam omnis similique, minus architecto labore sapiente, totam repellat! Vitae blanditiis dolor dolores odio iusto ipsum sed placeat voluptatibus nam, consequatur aperiam, odit incidunt assumenda libero, provident doloribus. Eum, saepe dolore blanditiis temporibus doloremque sequi id praesentium nihil ullam consectetur inventore consequatur accusamus magnam dolorum. Laudantium soluta, aut nihil optio repudiandae facilis distinctio veniam beatae omnis aperiam ducimus? Quasi, repellendus suscipit ex nemo voluptatum mollitia corrupti sed quod id! Ad aspernatur expedita commodi. Totam deserunt, ut, laboriosam officia dolorem ratione dolorum tempore hic fuga et labore in inventore quod repellendus ullam voluptas distinctio, perferendis id.
-        </p>
-    </div>
+   <div class="flot">
+    <h1>Lorem ipsum dolor sit amet.</h1>
+   </div>
+   <div class="float">
+    <span>Lorem, ipsum dolor.</span>
+
+   </div>
 </body>
 </html>
